--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .main {
     background-color: grey;
-    border: 3px solid black;
+    /* border: 3px solid black; */
     min-height: 100%;
     min-width: 100%;
     height: 100vh;
@@ -14,8 +15,9 @@
 }
 
 .navbar {
-    background-color: skyblue;
-    border: 3px solid black;
+    background-color: black;
+    /* border: 3px solid black; */
+    height: 100px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -25,24 +27,28 @@
     font-size: 30px;
     display: inline-block;
     text-decoration: none;
+    color: grey;
+    margin-left: 40px;
+}
+
+.navbar a:hover {
     color: white;
-    margin-left: 20px;
 }
 
 .navbar button {
-    background-color: skyblue;
+    background-color: deepskyblue;
+    padding: 10px;
     font-size: 30px;
     color: white;
-    margin: 10px;
 }
 
 #profile {
+    color: white;
     font-size: 50px;
+    margin-left: 0px;
 }
 
 .navleft {
-    background-color: aqua;
-    border: 3px solid black;
     min-width: 800px;
     margin: 0px 30px 0px 30px;
     display: flex;
@@ -50,9 +56,9 @@
 }
 
 .navright {
-    background-color: aqua;
-    border: 3px solid black;
     min-width: 400px;
+    min-height: 100px;
+    box-sizing: border-box;
     margin: 0px 30px 0px 30px;
     display: flex;
     justify-content: flex-end;
@@ -86,9 +92,9 @@
 }
 
 .usercard {
-    background-color: magenta;
+    background-color: white;
     border: 3px solid black;
-    min-height: 400px;
+    /* min-height: 400px; */
     margin-bottom: 40px;
 }
 
@@ -110,3 +116,124 @@
     border: 3px solid black;
     min-height: 300px;
 }
+
+
+/******************************************/
+
+
+/* Styling for usercard                   */
+
+
+/******************************************/
+
+.user-top {
+    display: block;
+    background-color: deepskyblue;
+    height: 120px;
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+
+.user-bottom {
+    padding: 30px;
+}
+
+.user-content {
+    position: relative;
+    top: -100px;
+}
+
+.user-paragraph {
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.user {
+    position: relative;
+    top: -50px;
+    left: 20px;
+    height: 100px;
+    width: 100px;
+    z-index: 100;
+}
+
+.user-map {
+    margin-top: 20px;
+    margin-right: 10px;
+    height: 20px;
+    display: inline-block;
+}
+
+.user-gear {
+    margin-top: 20px;
+    height: 20px;
+    margin-right: 10px;
+    display: inline-block;
+}
+
+.user-link {
+    margin-top: 20px;
+    font-size: 20px;
+    display: inline-block;
+}
+
+.usercard h1 {
+    margin-top: 20px;
+    font-size: 40px;
+}
+
+.usercard h2 {
+    margin-top: 20px;
+    font-size: 30px;
+    display: inline-block;
+}
+
+
+/******************************************/
+
+
+/* Styling for Education Box              */
+
+
+/******************************************/
+
+
+/******************************************/
+
+
+/* Styling for Requests Box               */
+
+
+/******************************************/
+
+.box-top {
+    background-color: black;
+    color: white;
+    font-size: 25px;
+    padding: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.box-bottom {
+    background-color: white;
+}
+
+.number-buttons {
+    padding: 10px;
+    font-size: 30px;
+    border-radius: 50%;
+    margin-right: 30px;
+}
+
+
+/******************************************/
+
+
+/* Styling for Connections Box            */
+
+
+/******************************************/
