--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,6 @@
 }
 
 .main {
-    background-color: grey;
-    /* border: 3px solid black; */
     min-height: 100%;
     min-width: 100%;
     height: 100vh;
@@ -16,7 +14,6 @@
 
 .navbar {
     background-color: black;
-    /* border: 3px solid black; */
     height: 100px;
     display: flex;
     flex-direction: row;
@@ -66,16 +63,12 @@
 }
 
 .container {
-    background-color: lightgreen;
-    border: 3px solid black;
     min-height: 800px;
     display: Flex;
     justify-content: center;
 }
 
 .leftcolumn {
-    background-color: aqua;
-    border: 3px solid black;
     min-width: 800px;
     margin: 30px 30px 0px 30px;
     display: flex;
@@ -83,8 +76,6 @@
 }
 
 .rightcolumn {
-    background-color: aqua;
-    border: 3px solid black;
     min-width: 400px;
     margin: 30px 30px 0px 30px;
     display: flex;
@@ -92,28 +83,23 @@
 }
 
 .usercard {
-    background-color: white;
-    border: 3px solid black;
-    /* min-height: 400px; */
+    border: 3px solid grey;
     margin-bottom: 40px;
 }
 
 .education {
-    background-color: indianred;
-    border: 3px solid black;
+    /* border: 3px solid grey; */
     min-height: 200px;
 }
 
 .requests {
-    background-color: goldenrod;
-    border: 3px solid black;
+    /* border: 3px solid grey; */
     min-height: 200px;
     margin-bottom: 40px;
 }
 
 .connection {
-    background-color: coral;
-    border: 3px solid black;
+    /* border: 3px solid grey; */
     min-height: 300px;
 }
 
@@ -133,6 +119,7 @@
     position: relative;
     top: 0px;
     left: 0px;
+    border: 3px solid deepskyblue;
 }
 
 .user-bottom {
@@ -146,7 +133,7 @@
 
 .user-paragraph {
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
 }
 
@@ -181,12 +168,12 @@
 
 .usercard h1 {
     margin-top: 20px;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 .usercard h2 {
     margin-top: 20px;
-    font-size: 30px;
+    font-size: 35px;
     display: inline-block;
 }
 
@@ -194,16 +181,7 @@
 /******************************************/
 
 
-/* Styling for Education Box              */
-
-
-/******************************************/
-
-
-/******************************************/
-
-
-/* Styling for Requests Box               */
+/* Styling for other boxes                */
 
 
 /******************************************/
@@ -219,21 +197,60 @@
 }
 
 .box-bottom {
+    padding: 10px;
+    border: 3px solid grey;
+    border-top: 0px;
     background-color: white;
+    font-size: 30px;
+}
+
+.user-row {
+    display: flex;
+    height: 50px;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 30px;
+    padding: 5px;
+}
+
+.user-row img {
+    height: 50px;
+    margin-right: 30px;
+}
+
+.accept-boxes {
+    display: flex;
+    justify-content: flex-end;
+    flex-grow: 1;
+}
+
+.accept-boxes img {
+    margin: 0;
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+#education-date {
+    font-size: 25px;
+    color: grey;
+}
+
+.education-bottom {
+    padding: 30px;
+    line-height: 40px;
 }
 
 .number-buttons {
     padding: 10px;
     font-size: 30px;
+    background-color: lightgrey;
     border-radius: 50%;
     margin-right: 30px;
 }
 
-
-/******************************************/
-
-
-/* Styling for Connections Box            */
-
-
-/******************************************/
+.connection-bottom {
+    font-size: 20px;
+    padding: 10px;
+    border: 3px solid grey;
+    border-top: 0px;
+}
